# llm-chess-arena

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/arenas/: blitz.yaml  classical.yaml  rapid.yaml
configs/players/: examples.yaml
configs/policies/: byo-pgn.yaml  hybrid.yaml  no-memory.yaml  shared-db.yaml
docs/: AGENTS.md  CONNECTORS.md  DESIGN.md  architecture.md  observer-ui.md  policies.md  protocol.md  rules.md
examples/: byo_pgn_policy.yaml  demo_tournament.yaml  shared_db_policy.yaml
scripts/: dev.sh  run_local_match.sh  seed_demo_data.sh
src/llm_chess_arena/: main.py  settings.py
src/llm_chess_arena/api/: __init__.py  deps.py  errors.py
src/llm_chess_arena/arbiter/: __init__.py  adjudication.py  clocks.py  legality.py  repetition.py  service.py  state.py
src/llm_chess_arena/domain/: __init__.py  enums.py  events.py  ids.py  models.py
src/llm_chess_arena/observer/: __init__.py  presenter.py  serializers.py
src/llm_chess_arena/orchestrator/: __init__.py  match_runner.py  sandbox_manager.py  tournament_runner.py  turn_manager.py
src/llm_chess_arena/players/: __init__.py  protocol.py  registry.py
src/llm_chess_arena/policy/: __init__.py  budgets.py  engine.py  models.py  tool_costs.py  visibility.py
src/llm_chess_arena/retrieval/: __init__.py  broker.py  views.py  (+1 more)
tests/e2e/: test_live_match.py
tests/integration/: test_chessgpt_client.py  test_match_flow.py  test_tool_budget_flow.py
tests/unit/: test_budgets.py  test_clocks.py  test_legality.py  test_policy_engine.py
web/: package.json
(+27 files in other folders)
